Add new views for startup, password recovery, and verification
Updated AppShell.xaml to set initial route to StartUpPageView.
Included new XAML files in MAUIRecipeApp.csproj for build process.
Added StartUpPageView with layout and code-behind files.
Added NewPasswordPageView with layout and code-behind files.
Added PasswordRecoveryPageView with layout and code-behind files.
Added VerifyCodePageView with layout and code-behind files.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -78,7 +78,19 @@
 	  <MauiXaml Update="View\Auth\LoginPageView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\Auth\NewPasswordPageView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\Auth\PasswordRecoveryPageView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\Auth\SignUpPageView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\Auth\VerifyCodePageView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\StartUpPageView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
