--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -81,6 +81,7 @@
 		<PackageReference Include="UraniumUI.Icons.FontAwesome" Version="2.9.1" />
 		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.9.1" />
 		<PackageReference Include="UraniumUI.Material" Version="2.9.1" />
+		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
 	</ItemGroup>
 
 	<ItemGroup>
