--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="3.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -86,11 +87,6 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="appsettings.json" />
-	</ItemGroup>
-
-
-	<ItemGroup>
-		<Folder Include="Model\" />
 	</ItemGroup>
 
 	<ItemGroup>
