--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 *.userprefs
 
 appsettings.json
+recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json
+
 
 # Mono auto generated files
 mono_crash.*
