--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="3.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="Google.Cloud.Firestore" Version="3.8.0" />
 		<PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
 		  <PrivateAssets>all</PrivateAssets>
@@ -83,6 +84,7 @@
 		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.9.1" />
 		<PackageReference Include="UraniumUI.Material" Version="2.9.1" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
+		
 	</ItemGroup>
 
 	<ItemGroup>
