Add Firestore integration and refactor login logic
Updated `MAUIRecipeApp.csproj` to include a new JSON credentials file for Firestore, ensuring it is copied to the output directory. Added an `ImageUrl` property to the `FoodRecipe` class in `FoodRecipe.cs`, marked with the `[FirestoreProperty]` attribute. Refactored the `Login` method in `StartUpPageViewModel.cs` to remove inline Firestore initialization and data fetching logic. Introduced a new `FirestoreService` singleton class in `FirestoreService.cs` for managing Firestore database connections and operations.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -121,4 +121,10 @@
 			  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
