--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -59,6 +59,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Platforms\Android\Assets\recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
+	  <None Remove="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
 	  <None Remove="Resources\Images\cartoon_food4.png" />
 	</ItemGroup>
 
@@ -93,6 +95,15 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="appsettings.json" />
+		<EmbeddedResource Include="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <AndroidAsset Update="Platforms\Android\Assets\recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </AndroidAsset>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -123,12 +134,6 @@
 		<MauiXaml Update="View\UserView\HomePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </None>
 	</ItemGroup>
 
 </Project>
