Update .gitignore and remove google-services.json
Updated .gitignore to ignore Firebase admin SDK JSON file.
Removed all content from google-services.json, indicating
Firebase configuration is no longer needed or moved.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 appsettings.json
 recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json
+recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json
 
 
 # Mono auto generated files
