--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -68,6 +68,7 @@
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Core" Version="3.0.0" />
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="3.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
+		<PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Google.Cloud.Firestore" Version="3.8.0" />
 		<PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
