--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -86,10 +86,10 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="UraniumUI" Version="2.9.1" />
+		<PackageReference Include="UraniumUI" Version="2.10.1" />
 		<PackageReference Include="UraniumUI.Icons.FontAwesome" Version="2.9.1" />
-		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.9.1" />
-		<PackageReference Include="UraniumUI.Material" Version="2.9.1" />
+		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.10.1" />
+		<PackageReference Include="UraniumUI.Material" Version="2.10.1" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
 		
 	</ItemGroup>
@@ -108,6 +108,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiXaml Update="View\AdminView\BackDropMainPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\Auth\LoginPageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
@@ -135,6 +138,10 @@
 		<MauiXaml Update="View\UserView\HomePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="View\NewFolder1\" />
 	</ItemGroup>
 
 </Project>
