Add new views and update AppShell for navigation
Updated AppShell.xaml:
- Added XML namespace for UraniumUI.Icons.MaterialSymbols.
- Moved Shell.FlyoutBehavior for startup route inside ShellContent.
- Set FlyoutItemIsVisible to True and Shell.FlyoutBehavior to Flyout for adminhome route.
- Added new FlyoutItem with tabs "Domestic" and "Monkeys" using MaterialSharp icons.

Updated MAUIRecipeApp.csproj:
- Included new XAML files for IngredientsPageView and RecipesPageView under View\AdminView.

Added new IngredientsPageView.xaml and IngredientsPageView.xaml.cs:
- Defined ContentPage with a centered Label displaying "Welcome to ingredient!".
- Added code-behind with constructor initializing the component.

Added new RecipesPageView.xaml and RecipesPageView.xaml.cs:
- Defined ContentPage with a centered Label displaying "Welcome to Recipe!".
- Added code-behind with constructor initializing the component.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -111,6 +111,12 @@
 		<MauiXaml Update="View\AdminView\BackDropMainPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\AdminView\IngredientsPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\RecipesPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\Auth\LoginPageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
