Refactor: Replace old views with new Edit*PageView components
- Updated AppShell.xaml to replace IngredientsPageView with various Edit*PageView components.
- Modified MAUIRecipeApp.csproj to include new MauiXaml entries for Edit*PageView components and removed old entries.
- Updated MauiProgram.cs to register new Edit*PageView components and their ViewModels with DI container.
- Removed IngredientsPageView.xaml and RecipesPageView.xaml files.
- Added new ViewModel files for each Edit*PageView component, inheriting from ObservableObject.
- Created new XAML and code-behind files for each Edit*PageView component with basic layout and ViewModel binding.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -111,10 +111,34 @@
 		<MauiXaml Update="View\AdminView\BackDropMainPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\IngredientsPageView.xaml">
+		<MauiXaml Update="View\AdminView\EditFoodRatingPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\RecipesPageView.xaml">
+		<MauiXaml Update="View\AdminView\EditFoodRecipeMappingPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditFoodRecipePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditFoodRecipeTypePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditIngredientsPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditRecipeIngredientsPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditTempTablePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditUserInfoPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditUserPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditUserSavedRecipePageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="View\Auth\LoginPageView.xaml">
