--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -61,6 +61,7 @@
 	<ItemGroup>
 	  <None Remove="Platforms\Android\Assets\recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
 	  <None Remove="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
+	  <None Remove="Resources\Images\admin_home_image.png" />
 	  <None Remove="Resources\Images\cartoon_food4.png" />
 	</ItemGroup>
 
@@ -108,6 +109,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiXaml Update="View\AdminView\AdminHomePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\AdminView\BackDropMainPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
