Integrate InputKit and UraniumUI for enhanced UI
Updated MAUIRecipeApp.csproj to remove resources from View\NewFolder1\** and add InputKit.Maui package reference (v4.4.7).

Modified MauiProgram.cs to include InputKit.Handlers namespace and configure Maui handlers to add InputKitHandlers.

Changed EditFoodRecipePageView.xaml to use UraniumContentPage, added namespaces for InputKit.Shared.Controls and UraniumUI, and added a button for toggling a backdrop and a BackdropView with MultiplePickerField and AdvancedSlider.

Updated EditFoodRecipePageView.xaml.cs to inherit from UraniumContentPage and added OnSliderValueChanged method.

Updated EditFoodRecipePageViewModel.cs to use CommunityToolkit.Mvvm.Input namespace, added isBackdropPresented property, and ToggleBackdrop command.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -59,6 +59,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="View\NewFolder1\**" />
+	  <Compile Remove="View\NewFolder1\**" />
+	  <EmbeddedResource Remove="View\NewFolder1\**" />
+	  <MauiCss Remove="View\NewFolder1\**" />
+	  <MauiXaml Remove="View\NewFolder1\**" />
+	  <None Remove="View\NewFolder1\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Platforms\Android\Assets\recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
 	  <None Remove="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
 	  <None Remove="Resources\Images\admin_home_image.png" />
@@ -73,6 +82,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Google.Cloud.Firestore" Version="3.8.0" />
 		<PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
+		<PackageReference Include="InputKit.Maui" Version="4.4.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -172,10 +182,6 @@
 		<MauiXaml Update="View\UserView\HomePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="View\NewFolder1\" />
 	</ItemGroup>
 
 </Project>
