Update Flyout UI and project dependencies
Modified AppShell.xaml to enhance Flyout header and footer:
- Changed Grid background color to "WhiteText"
- Updated image source to "food_background_img.png"
- Added Frame with Image (source: "logo.png") and various properties
- Added commented-out Label element
- Changed Flyout footer text to "Kitchen Verse"

Updated MAUIRecipeApp.csproj:
- Removed references to unused image files
- Added package references: AathifMahir.Maui.MauiIcons.Core and AathifMahir.Maui.MauiIcons.Material (version 3.0.0)

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -72,6 +72,8 @@
 	  <None Remove="recipeapp-3c612-firebase-adminsdk-blmv2-aabcd1703d.json" />
 	  <None Remove="Resources\Images\admin_home_image.png" />
 	  <None Remove="Resources\Images\cartoon_food4.png" />
+	  <None Remove="Resources\Images\food_background_img.png" />
+	  <None Remove="Resources\Images\logo.png" />
 	</ItemGroup>
 
 	<ItemGroup>
