--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -184,6 +184,9 @@
 		<MauiXaml Update="View\UserView\HomePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			  </MauiXaml>
+		<MauiXaml Update="View\UserView\SubmitNewRecipeView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 </Project>
