Enhance UI and add new user features
- Added a new XML namespace for material icons in `AppShell.xaml`.
- Replaced and commented out `ShellContent` for the home page, added a new `TabBar` with tabs for Home, Saved, and User sections.
- Updated `MAUIRecipeApp.csproj` to include new XAML files for user views.
- Registered new views and view models in `MauiProgram.cs`.
- Fixed the `Text` property of the login button in `LoginPageView.xaml`.
- Refactored `HomePageView.xaml` to improve layout and add a new section for submitting new recipes.
- Updated `LoginPageViewModel.cs` to handle exceptions during login and provide error messages.
- Added a new command `SubmitNewRecipe` in `HomePageViewModel.cs`.
- Created new views and view models for user info, saved recipes, and saved collections.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -189,6 +189,15 @@
 		<MauiXaml Update="View\UserView\SubmitNewRecipeView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserInfoPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserSavedCollectionPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserSavedRecipePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 </Project>
