Add Chat feature, update layouts, and improve HomePage
Introduced a new "Chat" feature with UI, view models, and services
to support chat interactions using the Gemini AI service. Updated
`AppShell.xaml` to include a new `ShellContent` for the "Chat" page.

Updated `MAUIRecipeApp.csproj` to include new package references
for `Google_GenerativeAI`, `Microsoft.Extensions.DependencyInjection`,
and `OpenAI`, and updated versions for `Microsoft.Extensions.Configuration`
and `Microsoft.Extensions.Configuration.Json`. Added a new `MauiXaml`
entry for `ChatPageView.xaml`.

Modified `MauiProgram.cs` to load `appsettings.json` and added
`GeminiService` as a singleton service. Registered `ChatPageView`
and `ChatPageViewModel` as transient services.

Improved layout alignment in `LoginPageView.xaml` and `SignUpPageView.xaml`.
Updated `HomePageView.xaml` to bind greeting text and username to new
properties in `HomePageViewModel.cs`. Removed commented-out code and
enhanced methods in `HomePageViewModel.cs`.

Added `GeminiService` class to handle interactions with the Gemini AI
service. Added `ChatPageViewModel` class to manage chat interactions.
Created `ChatPageView.xaml` and `ChatPageView.xaml.cs` to define and
initialize the chat page UI.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -83,6 +83,7 @@
 		<PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Google.Cloud.Firestore" Version="3.8.0" />
+		<PackageReference Include="Google_GenerativeAI" Version="1.0.2" />
 		<PackageReference Include="IdentityModel.OidcClient" Version="6.0.0" />
 		<PackageReference Include="InputKit.Maui" Version="4.4.7" />
 		<PackageReference Include="MailKit" Version="4.9.0" />
@@ -95,12 +96,14 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="MimeKit" Version="4.9.0" />
+		<PackageReference Include="OpenAI" Version="2.1.0" />
 		<PackageReference Include="UraniumUI" Version="2.10.1" />
 		<PackageReference Include="UraniumUI.Icons.FontAwesome" Version="2.9.1" />
 		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.10.1" />
@@ -179,6 +182,9 @@
 		</MauiXaml>
 		<MauiXaml Update="View\StartUpPageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\ChatPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="View\UserView\FoodRecipePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
