Add new views, view models, and services for recipe management
- Added new `ShellContent` entries in `AppShell.xaml` for various views.
- Updated `MAUIRecipeApp.csproj` to include new XAML files.
- Registered new views and view models in `MauiProgram.cs`.
- Reformatted `FoodRecipe` class for better readability.
- Enhanced `HomePageView` with navigation to test screens.
- Refactored `SubmitNewRecipeView` to use view model binding.
- Removed obsolete classes from `SubmitNewRecipeView.xaml.cs`.
- Refactored `SubmitNewRecipeViewModel` for better state management.
- Added `IngredientInfos` class for ingredient details.
- Added `FoodRecipeService` for CRUD operations on recipes.
- Added `FoodRecipeTypeMappingService` for recipe type mappings.
- Added `FoodRecipeTypeService` for managing food recipe types.
- Added `IngredientService` for managing ingredients.
- Added `RecipeIngredientService` for managing recipe ingredients.
- Added `UserSavedRecipesService` for managing saved recipes.
- Added view models for editing recipes and ingredients.
- Created new views for editing recipes, ingredients, and displaying collections.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -180,13 +180,31 @@
 		<MauiXaml Update="View\StartUpPageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\EditFoodRecipeView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\EditIngredientsView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\FoodRecipePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="View\UserView\HomePageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 			  </MauiXaml>
+		<MauiXaml Update="View\UserView\RecipesCollectionView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\SubmitNewRecipeView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\TestScreensView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserRecipesView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserSavedRecipesView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 	</ItemGroup>
