--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -105,6 +105,7 @@
 		<PackageReference Include="MimeKit" Version="4.9.0" />
 		<PackageReference Include="OpenAI" Version="2.1.0" />
 		<PackageReference Include="UraniumUI" Version="2.10.1" />
+		<PackageReference Include="UraniumUI.Dialogs.Mopups" Version="2.10.1" />
 		<PackageReference Include="UraniumUI.Icons.FontAwesome" Version="2.9.1" />
 		<PackageReference Include="UraniumUI.Icons.MaterialSymbols" Version="2.10.1" />
 		<PackageReference Include="UraniumUI.Material" Version="2.10.1" />
@@ -129,15 +130,6 @@
 		<MauiXaml Update="View\AdminView\AdminHomePageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\BackDropMainPageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditFoodRatingPageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditFoodRecipeMappingPageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
 		<MauiXaml Update="View\AdminView\EditFoodRecipePageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
@@ -147,19 +139,19 @@
 		<MauiXaml Update="View\AdminView\EditIngredientsPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditPage\EditCurrentFoodRecipePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditPage\EditCurrentFoodTypePageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\AdminView\EditPage\EditCurrentUserPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\AdminView\EditRecipeIngredientsPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditTempTablePageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditUserInfoPageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
 		<MauiXaml Update="View\AdminView\EditUserPageView.xaml">
-		  <Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditUserSavedRecipePageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="View\Auth\LoginPageView.xaml">
