Refactor UI and services, add ingredient editing
Updated AppShell.xaml and AppShell.xaml.cs to add routes and event handlers. Enhanced AuthService with a new LogOut method. Refactored GeminiService with new chat sessions and methods. Updated various XAML files for improved UI and functionality. Removed EditRecipeIngredientsPageView and its code-behind. Added new DTOs and services. Implemented EditCurrentIngredientPageView and its ViewModel for ingredient editing.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -145,10 +145,10 @@
 		<MauiXaml Update="View\AdminView\EditPage\EditCurrentFoodTypePageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditPage\EditCurrentUserPageView.xaml">
+		<MauiXaml Update="View\AdminView\EditPage\EditCurrentIngredientPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
-		<MauiXaml Update="View\AdminView\EditRecipeIngredientsPageView.xaml">
+		<MauiXaml Update="View\AdminView\EditPage\EditCurrentUserPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="View\AdminView\EditUserPageView.xaml">
