Add feature to display all user collections
Introduced a new namespace `UserViewCollection` in `AppShell.xaml` and added a new `ShellContent` for "Collection" with an icon and route. Updated the "Saved Collection" icon glyph. Registered a new route for "allcollection" in `AppShell.xaml.cs`.

Updated `MAUIRecipeApp.csproj` to include the new `AllCollectionPageView.xaml` file. Added transient services for `AllCollectionPageView` and `AllCollectionPageViewModel` in `MauiProgram.cs`.

Removed `FirestoreProperty` attributes from properties in `FoodCollection.cs`, `FoodCollectionDetail.cs`, and `UserSavedCollection.cs`. Modified `AddDocumentAsync` in `FirestoreService.cs` to return the document ID. Updated view models to handle the new return type.

Created `AllCollectionPageViewModel` with a placeholder `OnAppearing` method. Added `AllCollectionPageView.xaml` to define the UI for displaying all collections and `AllCollectionPageView.xaml.cs` for code-behind.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -175,6 +175,9 @@
 		<MauiXaml Update="View\StartUpPageView.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\Collection\AllCollectionPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\Collection\CollectionDetailPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
