Add feature to display and manage all user collections
Introduce new routes, views, and view models to support displaying
and managing collections from all users. Update `AppShell.xaml.cs`
to register new routes. Modify `MAUIRecipeApp.csproj` to include
new XAML file. Add transient services in `MauiProgram.cs`.

Update `AllCollectionPageView.xaml` to add XML namespace, change
data type, update bindings, and modify label styles. Comment out
a button element. Update `UserSavedCollectionPageView.xaml` to
change label styles.

Significantly update `AllCollectionPageViewModel.cs` to add new
properties, methods for loading collections, and navigation.

Add new `CollectionDetailInAllPageViewModel.cs` to define
properties and commands for managing collection details.

Add new `CollectionDetailInAllPageView.xaml` and its code-behind
to define UI layout and initialize view model.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -178,6 +178,9 @@
 		<MauiXaml Update="View\UserView\Collection\AllCollectionPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\Collection\CollectionDetailInAllPageView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\Collection\CollectionDetailPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
