Add feature for creating and managing food collections
Introduced a new feature for creating food collections:
- Added `ShellContent` entry in `AppShell.xaml` for `CreateCollectionView`.
- Updated `MAUIRecipeApp.csproj` to include new XAML files.
- Registered `CreateCollectionView` and `CreateCollectionViewModel` in `MauiProgram.cs`.
- Made `FoodCollectionDetailId` nullable in `FoodCollectionDetail.cs`.
- Changed `TapGestureRecognizer` command in `HomePageView.xaml`.
- Added `CreateCollection` command in `HomePageViewModel.cs`.
- Added debug logging in `SubmitNewRecipeViewModel.cs`.
- Refactored `LoadIngredientsAsync` in `SubmitNewRecipeViewModel.cs`.
- Enhanced input validation in `SubmitNewRecipeViewModel.cs`.
- Created `CreateCollectionViewModel.cs` for managing collections.
- Added `CreateCollectionView.xaml` for the UI of creating collections.
- Implemented code-behind for `CreateCollectionView.xaml`.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -184,6 +184,12 @@
 		<MauiXaml Update="View\UserView\Collection\CollectionDetailPageView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\Collection\NewPage1.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="View\UserView\CreateCollectionView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\EditFoodRecipeView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
