--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -194,6 +194,9 @@
 		<MauiXaml Update="View\UserView\CreateCollectionView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\EditCollectionView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\EditFoodRecipeView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
