Add user collections feature and refactor user recipes view
Introduced a new feature for managing user collections:
- Added `UserCollectionsView` navigation in `AppShell.xaml`.
- Updated `MAUIRecipeApp.csproj` to include `UserCollectionsView.xaml`.
- Registered `UserCollectionsView` and `UserCollectionsViewModel` in DI container.
- Added navigation button in `TestScreensView.xaml`.
- Created `UserCollectionsView.xaml` and `UserCollectionsView.xaml.cs`.
- Implemented `UserCollectionsViewModel` for Firestore data handling.

Refactored `UserRecipesView` for improved UI and functionality:
- Enhanced layout with spacing, background color, and grid layout.
- Updated `UserRecipesViewModel` to use Firestore and added navigation commands.
- Modified `TestScreensViewModel` to navigate to user collections.

--- a/MAUIRecipeApp.csproj
+++ b/MAUIRecipeApp.csproj
@@ -221,6 +221,9 @@
 		<MauiXaml Update="View\UserView\TestScreensView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="View\UserView\UserCollectionsView.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="View\UserView\UserRecipesView.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
